Fix x overflow bug

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -14,7 +14,6 @@ body {
   background-color: $black;
   font-family: ubuntuMono;
   color: #fff;
-  overflow-x: hidden;
 }
 
 h1 {
